Main Screen and Change Theme screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,14 +34,14 @@
         <item>أذكار الصلاة</item>
         <item>أذكار المساء</item>
         <item>صلاة المغرب</item>
-        <!--<item>سنة المغرب</item>-->
-        <!--<item>أذكار الصلاة</item>-->
-        <!--<item>صلاة العشاء</item>-->
-        <!--<item>سنة العشاء</item>-->
-        <!--<item>اذكار الصلاة</item>-->
-        <!--<item>ركعتين قيام الليل</item>-->
-        <!--<item>صلاة الشفع</item>-->
-        <!--<item>صلاة الوتر</item>-->
-        <!--<item>صيام الإثنين و الخميس</item>-->
+        <item>سنة المغرب</item>
+        <item>أذكار الصلاة</item>
+        <item>صلاة العشاء</item>
+        <item>سنة العشاء</item>
+        <item>اذكار الصلاة</item>
+        <item>ركعتين قيام الليل</item>
+        <item>صلاة الشفع</item>
+        <item>صلاة الوتر</item>
+        <item>صيام الإثنين و الخميس</item>
     </string-array>
 </resources>
