sebha Screen , azkar details screen , werd mohasba screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,22 +48,37 @@
     <string-array name="AzkarCategories">
         <item>اذكار الصباح</item>
         <item>اذكار المساء</item>
+        <item>اذكار قبل النوم</item>
         <item>اذكار بعد الصلاة</item>
         <item>اذكار الأذان</item>
-        <item>اذكار قبل النوم</item>
+        <item>من فضائل يوم الجمعة</item>
+        <item>الذكر عند دخول المنزل</item>
+        <item>الذكر عند الخروج من المنزل</item>
         <item>الذكر قبل الوضوء</item>
         <item>الذكر بعد الوضوع</item>
         <item>دعاء دخول المسجد</item>
         <item>دعاء الخروج من المسجد</item>
         <item>الدعاء بعد التشهد قبل السلام</item>
-        <item>ما يفعل من رأي الزؤيا أو الحلم</item>
+        <item>ما يفعل من رأي الرؤيا أو الحلم</item>
+        <item>ما يفعل او يقال من أحس وجعا في جسده</item>
         <item>دعاء الإستخارة</item>
-        <item>دعاء سجود التلاوة</item>
+        <item>من خشي ان يصيب شئ بعينه</item>
         <item>دعاء الفزع من النوم</item>
         <item>قبل الطعام</item>
-        <item>الذكر عند دخول المنزل</item>
-        <item>ما يفعل او يقال من أحس وجعا في جسده</item>
-        <item>من خشي ان يصيب شئ بعينه</item>
-        <item>من فضائل يوم الجمعة</item>
+        <item>دعاء سجود التلاوة</item>
+    </string-array>
+
+    <string-array name="SebhaAzkar">
+        <item>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد</item>
+        <item>لا إله إلا الله وحده لا شريك له , له الملك وله الحمد وهو على كل شيء قدير</item>
+        <item>لا اله الا انت استغفرك واتوب اليك</item>
+        <item>أستغفر الله</item>
+        <item>سبحان الله</item>
+        <item>الحمد لله</item>
+        <item>لا إله إلا الله</item>
+        <item>الله أكبر</item>
+        <item>لا إله الا انت استغفرك واتوب اليك</item>
+        <item>استغفر الله واتوب اليه</item>
+        <item>سبحان الله وبحمده سبحان الله العظيم</item>
     </string-array>
 </resources>
